2001-07-15  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1: Remove .BI with more than 6 args.

2001-07-15  Mikhael Goikhman  <migo@homemail.com>

	* bindings.c:
	use libstroke-0.5 constant names while still supporting 0.3/0.4

	* menus.c:
	compiling fix for old AIX, which does not define XK_Page_Up/Down

	* module_interface.c:
	minor compiling fix for some proprietary preprocessors

2001-07-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	use more compatible and structured syntax in SYNOPSIS

2001-07-06  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	Replaced forgotten instances of IMLIB_{CFLAGS,LIBS} to GDK_IMLIB_*.
	This fixes "make FvwmGtk" on systems with bogus imlib-config.

2001-07-05  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	changed version to 2.4.1

	* acinclude.m4:
	small fix that should solve the problem with running autoconf
	(autoreconf is ok) from autoconf-2.50;
	applied a patch that adds gtk include dirs to gnome include dirs

2001-07-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in:
	changed version to 2.4.0.1

	* *: fvwm 2.4 has been released :-))

2001-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	(find_entry):
	(menuShortcuts):
	(pop_menu_up):
	reduce network traffic during menu waits

2001-06-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2:
	minor corrections

	* sample.fvwmrc/system.fvwm2rc-sample-95:
	Fixed several problems like position hints in WindowList should
	go before other args, invisible menu Greyed color, SelectOnRelease
	in the skipped window listing and text rewordings.
	In addition, some parts of Setup95 were based on earlier fvwm-themes,
	since then these parts are changed, so update some of them here too.
	This includes renaming desktop component to globalfeel, some changes
	in menus and more minor cleanups. It's still messy enough, but ok...

2001-06-29  Dominik Vogt  <dominik.vogt@gmx.de>
