@@ -1,3 +1,15 @@
+2001-07-17  Mikhael Goikhman  <migo@homemail.com>
+
+	* acconfig.h:
+	* acinclude.m4:
+	* configure.in:
+	implemented a new convenient autoconf macro mg_DEFINE_IF_NOT;
+	define missing macros needed for old AIX keysymdef and old stroke.h
+
+	* fvwm/bindings.c:
+	* fvwm/menus.c:
+	remove the previous compilation fixes, now handled by configure
+
 2001-07-15  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/fvwm2.1: Remove .BI with more than 6 args.
